added and tested photos mechanics
